<resources>
    <string name="app_name">Float Menu 1.9</string>
    <string name="segunda_tela">Segunda Tela</string>
    <string name="hello_world">Sistema ELFO de Informática!</string>
    <string name="hello">Edmar Luiz Leone Fogaça</string>
    <string name="world">Cruz Alta - RS - Brasil</string>
    <string name="action_settings">FAB-2 Boton FlotanteMaterial Design</string>
    <string name="action">Formando Codigo</string>
    <string name="act">Incluido Menu Settings</string>
    <string name="settings">WebSite:https://elfogaca.</string>
    <string name="set">wixsite.com/portifolio-elfo</string>
    <string name="wor">Fogaça´s Home Page</string>
    <string name="elfo">elfo ® 2017</string>

    <string name="about">Sobre (clique aqui)</string>
    <string name="about_body"><![CDATA[
        Botão de ação flutuante, uma biblioteca by <a href="https://www.youtube.com/channel/UCdVAlmigRIbOnvg6Y_aEb2w">Canal Elfogaca</a>.<br/>
        <a href=\'https://github.com/elfogaca/FloatMenu\'>https://github.com/elfogaca/Float Menu 1.9</a>
    ]]></string>
</resources>
