<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="maddo.foo.telasplash.MainActivity" >

    <item
        android:id="@+id/action"
        android:orderInCategory="100"
        android:title="@string/action"/>
    <item
        android:id="@+id/act"
        android:orderInCategory="200"
        android:title="@string/act"/>

    <item
        android:id="@+id/settings"
        android:orderInCategory="300"
        android:title="@string/settings"/>
    <item
        android:id="@+id/set"
        android:orderInCategory="400"
        android:title="@string/set"/>
    <item
        android:id="@+id/hello_world"
        android:orderInCategory="500"
        android:title="@string/hello_world"/>
    <item
        android:id="@+id/hello"
        android:orderInCategory="600"
        android:title="@string/hello"/>
    <item
        android:id="@+id/world"
        android:orderInCategory="700"
        android:title="@string/world"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="800"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/elfo"
        android:orderInCategory="1000"
        android:title="@string/elfo"/>

    <item
        android:id="@+id/about"
        android:orderInCategory="1100"
        android:title="@string/about" />

</menu>
